--- a/views/books/books_list.pug
+++ b/views/books/books_list.pug
@@ -3,21 +3,24 @@ extends ../layout
 block content
     .container-fluid
         h1 List Books
-            table.table.table-striped.fs-6
-                thead 
-                    tr 
-                        th(scope="col") ID 
-                        th(scope="col") Title 
-                        th(scope="col") Author
-                        th(scope="col") Summary
-                        th(scope="col") ISBN 
-                        th(scope="col") Genre 
-                tbody
-                    each book in books
+            if(books.length > 0)
+                table.table.table-striped.fs-6
+                    thead 
                         tr 
-                            th(scope="row")=book.id
-                            th(scope="row")=book.title
-                            th(scope="row")=book.author
-                            th(scope="row")=book.summary 
-                            th(scope="row")=book.isbn 
-                            th(scope="row")=book.genre
+                            th(scope="col") ID 
+                            th(scope="col") Title 
+                            th(scope="col") Author
+                            th(scope="col") Summary
+                            th(scope="col") ISBN 
+                            th(scope="col") Genre 
+                    tbody
+                        each book in books
+                            tr 
+                                th(scope="row")=book.id
+                                th(scope="row")=book.title
+                                th(scope="row")=book.author
+                                th(scope="row")=book.summary 
+                                th(scope="row")=book.isbn 
+                                th(scope="row")=book.genre
+            else 
+                h1 Not Books Available
